# hybris

./: .gitignore  .parser.cpp.swp  AUTHORS  CHANGELOG  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  README  README.markdown  README.md  Rakefile  autogen.sh  builtin.cpp  cmdline.hpp  configure.ac  hybris.cbp  hybris.layout  hybris.layout.backup  lexer.l.cpp  map.hpp  object.hpp  vmem.cpp
.svn/: dir-props  entries
.svn/text-base/: common.h.svn-base  parser.y.cpp.svn-base  tree.hpp.svn-base  vmem.h.svn-base
builtins/: conio.cc  dll.cc  fileio.cc  http.cc  map.cc  netio.cc  xml.cc
builtins/.svn/: entries
builtins/.svn/text-base/: array.cc.svn-base  math.cc.svn-base  pcre.cc.svn-base  process.cc.svn-base  reflection.cc.svn-base  string.cc.svn-base  time.cc.svn-base  type.cc.svn-base
doc/: index.html
doc/css/: all.css  print.css  screen.css
doc/index/: alphabetical.html
doc/pages/: alias.html  altri.html  aritmetici.html  array.html  binario.html  bitwise.html  booleano.html  carattere.html  cgi.html  classe.html  compilazione_ed_installazione.html  condizionali.html  do_while.html  for.html  foreach.html  gestione_della_memoria.html  gli_operatori.html  i_costrutti_sintattici.html  if_else.html  importazione.html  inclusione.html  indice.html  intero.html  introduzione.html  iterativi.html  l_interprete.html  le_due_librerie_standard.html  le_eccezioni.html  le_funzioni.html  logici.html  mappa.html  matrice.html  mod-dev.html  reale.html  reference.html  reference_counting_e_gestione_della_memoria.html  run_time_loading.html  stringa.html  struttura.html  switch.html  (+4 more)
examples/: Makefile  alias.hs  alias.hy  alias_as_ptr.hs  alias_as_ptr.hy  array00.hs  binary.hy  dll.hs  dll.hy  echo_server.hs  echo_server_mthread.hs  echo_server_mthread.hy  encoding.hs  error.hy  file.hy  github.hs  include.hy  libmbox.cc  libtest.cc  map.hs  matrix.hs  pack.hy  pcre.hy  pcre_operator.hs  pcre_operator.hy  perfect.hs  prime.hs  prime.hy  process.hy  range.hy  readdir.hs  ricorsiva.hs  ricorsiva.hy  shift.hs  sigsegv.hy  socket.hy  struct.hy  switch.hy  ternary.hs  threads.hs  (+3 more)
include/: asciitree.h  builtin.h  cmdline.h  code.h  common.h  config.h  config.h.in  context.h  cseg.h  darray.h  debug.h  engine.h  executor.h  executors.h  gc.h  hashmap.h  hashtable.h  hybris.h  itree.h  llist.h  map.h  memory.h  mseg.h  node.h  object.h  tree.h  types.h  vcode.h  vm.h  vmem.h
src/: asciitree.cpp  binary.cpp  builtin.cpp  char.cpp  cmdline.cpp  code.cpp  common.cpp  context.cpp  cseg.cpp  engine.cpp  executor.cpp  executors.cpp  float.cpp  gc.cpp  hashtable.cpp  hybris.cpp  integer.cpp  lexer.l.cpp  main.cpp  map.cpp  matrix.cpp  memory.cpp  mseg.cpp  node.cpp  object.cpp  parser.y.cpp  string.cpp  structure.cpp  tree.cpp  types.cpp  vcode.cpp  vector.cpp  vm.cpp  vmem.cpp
src/builtins/: Makefile.am  array.cc  binary.cc  conio.cc  dll.cc  encoding.cc  fileio.cc  http.cc  map.cc  math.cc  matrix.cc  netio.cc  pcre.cc  process.cc  pthreads.cc  reflection.cc  string.cc  time.cc  type.cc  xml.cc
src/core/: asciitree.cpp  common.cpp  darray.cpp  engine.cpp  llist.cpp  node.cpp  types.cpp
src/core/types/: binary.cpp  boolean.cpp  char.cpp  class.cpp  float.cpp  handle.cpp  integer.cpp  map.cpp  reference.cpp  string.cpp  structure.cpp  vector.cpp
src/types/: binary.cpp  boolean.cpp  char.cpp  class.cpp  float.cpp  handle.cpp  integer.cpp  map.cpp  matrix.cpp  reference.cpp  string.cpp  structure.cpp  vector.cpp
src/vm/: code.cpp  debug.cpp  gc.cpp  memory.cpp  vm.cpp
stdinc/std/: Array.hy  Exception.hy  Map.hy  MethodReference.hy
stdinc/std/io/: Console.hy  Directory.hy  File.hy
stdinc/std/io/network/: CGI.hy
stdinc/std/io/network/tcp/: ClientSocket.hy  ServerSocket.hy  Socket.hy
stdinc/std/os/: Dll.hy  Pipe.hy  Process.hy  Runnable.hy  Runner.hy  Thread.hy
stdinc/std/test/: TestResult.hy  TestSuite.hy  TestUnit.hy
stdlib/: Makefile.am
stdlib/std/: encoding.cc  gc.cc  math.cc  pcre.cc  regexp.cc
stdlib/std/hashing/: crc32.cc  md5.cc  sha1.cc  sha2.cc
stdlib/std/io/: console.cc  file.cc  serial.cc  xml.cc
stdlib/std/io/network/: http.cc  smtp.cc  socket.cc  tcp.cc
stdlib/std/lang/: array.cc  binary.cc  map.cc  reflection.cc  type.cc
stdlib/std/os/: device.cc  dll.cc  process.cc  threads.cc  time.cc
stdlib/std/type/: array.cc  binary.cc  map.cc  matrix.cc  reflection.cc  string.cc  type.cc
tests/: dollar.hs  github.hs  gmon.out  ipnotifier.hs  reflection.hs  shell.hs  socket.hs  stacktrace.hs  test.xml  time.hs  xml.hs
tests/.svn/: dir-props  entries
tests/.svn/text-base/: dll.hs.svn-base  http.hs.svn-base  pcre.hs.svn-base  process.hs.svn-base
